--- a/package.json
+++ b/package.json
@@ -6,6 +6,17 @@
   "author": "tim-otewe",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.15.3"
+    "aws-sdk": "^2.83.0",
+    "bcrypt": "^1.0.2",
+    "body-parser": "^1.17.2",
+    "dotenv": "^4.0.0",
+    "express": "^4.15.3",
+    "jsonwebtoken": "^7.4.1",
+    "mongoose": "^4.11.1",
+    "morgan": "^1.8.2"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   }
 }
